@@ -361,6 +361,7 @@ makej.test \
 makevars.test \
 man.test \
 man2.test \
+man3.test \
 mclean.test \
 mdate.test \
 mdate2.test \
